--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,5 @@
 .project
 .envrc
 /inventory.yaml
-/vagrant/modules/
 /vagrant/Puppetfile.lock
-/ubuntu-bionic-18.04-cloudimg-console.log
+ubuntu-bionic-18.04-cloudimg-console.log
