Fix issue with GitHub actions logic
Signed-off-by: Samuli Seppänen <samuli@openvpn.net>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -68,6 +68,8 @@ jobs:
           - "12.0.1"
         keycloak_full:
           - "no"
+        keycloak_domain_mode_cluster:
+          - "no"
         include:
           - set: "centos-7"
             puppet: "puppet5"
